src/app/custom/themes/inist/css/inist-styles.css
/* ... */
a {
    color: var(--text-primary);
    background-color: transparent;
    text-decoration: none;
}
a:hover {
    text-decoration: underline 2px var(--info-main);
}
/*Hierarchie et style titres*/
h1 {
    font-family: var(--font-titre);
    color: var(--text-primary);
}
h2 {
    font-family: var(--font-titre);
    color: var(--text-primary);
}
h3 {
    font-family: var(--font-titre);
    color: var(--text-primary);
}
h4 {
    font-family: var(--font-titre);
    color: var(--text-primary);
    font-style: italic;
}
/*structure generale*/
html {
    height: 100%;
    padding: 0;
    margin: 0;
}
body {
    display: flex;
    flex-direction: column;
    background-image: url('../img/bg_projets.jpg');
    background-repeat: repeat-x;
    background-position: top left;
    opacity: 1;
}
/*header theme inist*/
header {
    position: fixed;
    top: 0;
    width: 100vw;
    background-color: var(--primary-main);
    background-image: url('../img/bg_projets.jpg');
    background-repeat: repeat-x;
    background-position: top left;
    opacity: 1;
    z-index: 1150;
    margin: 0;
    height: var(--height-header);
}
header div.container {
    padding: 1rem 0 1rem;
    display: flex;
    gap: 10%;
    max-width: 1670px !important;
}
header div.container * {
    color: var(--primary-contrast-text);
}
header div#logos {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: max-content;
}
header a.logocnrs {
    height: 56px;
    padding-right: 30px;
}
header a.logocnrs img {
    height: 55px;
}
header a.logoinist {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    width: 240px;
}
/*header font decoration*/
header a.logo,
header a:hover.logo,
header a:focus.logo,
header a:active.logo {
    text-decoration: none;
}
header a.logoinist {
    font-size: 0.8125rem;
    line-height: normal;
}
header a.logoinist > span:first-child {
    font-family: 'Satoshi-Bold', Arial, Helvetica, sans-serif;
    font-size: 1.875rem;
}
header a.logoinist span.inist {
    font-family: 'Satoshi-Regular', Arial, Helvetica, sans-serif;
    font-weight: bold;
}
header a.logoinist > span:first-child::after {
    content: '|';
    font-family: 'Satoshi-Regular', Arial, Helvetica, sans-serif;
    font-weight: normal;
    opacity: 0.8;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
}
/*text header bg fonce sur img bg body*/
header #logos, header #titre_lodex/*,
.breadcrumb-trail a[href*="https"]*/ {
    background-color: rgba(24, 20, 79, 0.6);
    box-shadow: 0px 0px 10px rgba(24, 20, 79, 0.9);
}
/*footer theme inist*/
footer {
    flex-grow: 0;
    flex-shrink: 0;
    margin-bottom: 90px;
    margin-top: 1rem;
    background-color: #fff;
}
footer ul {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    justify-content: flex-start;
    align-items: flex-start;
    padding-left: 1.6rem !important;
    padding-right: 1.6rem !important;
    margin: 5px auto;
}
footer ul li {
    flex: 1;
    display: flex;
    align-items: center;
    list-style: none;
    padding: 7px 30px;
    margin: 15px 0;
}
footer li a,
footer li a:hover,
footer li a:focus,
footer li a:active {
    font-family: var(--font-texte);
    font-size: 18px;
    border-bottom: 1px solid var(--info-main);
    color: #434148;
    text-decoration: none;
}
footer li a[href*='https']::after {
    background-image: url('../img/external-link-alt_gris.svg');
}
footer li#lodex::before {
    width: 30px;
    height: 30px;
    content: ' ';
    background: #fff left center no-repeat scroll url('/favicon.ico');
    background-size: contain;
}

/*ELEMENTS LODEX structure*/
/*padding et fond descendent 3 noeuds*/
/*breadcrumb au niveau header fond transparent*/
#root {
    min-height: 85vh;
}
.container,
.container-fluid {
    width: 100%;
    max-width: 1700px;
    margin-right: auto;
    margin-left: auto;
    padding-left: 0;
    padding-right: 0;
}
/*connexion*/
.body > .MuiPaper-root {
    margin-top: var(--height-header);
    padding: 3rem;
}
/*annul reserve pour nav bas de pages lodex (sur footer)*/
._1dzy633 {
    padding-bottom: 0 !important;
}
/*pages+drawers margin padding fond blanc*/
div.dataset-characteristics,
div.resource,
.static-page,
.graph-container,
.drawer._13un6rc {
    padding-left: 1.6rem;
    padding-right: 1.6rem;
}
/*header+breadcrumb fixed*/
div.dataset-characteristics,
div.resource,
div.static-page,
.graph-page.graph-container {
    margin-top: var(--height-header) !important;
    padding-top: 2rem;
    background-color: white;
}
/*drawer entre header et nav fixed*/
.drawer-drawerOpen._13un6rc {
    top: 12vh !important;
    height: -webkit-calc(100vh - 12vh - 80px) !important ;
    height: -moz-calc(100vh - 12vh - 80px) !important;
    height: calc(100vh - 12vh - 80px) !important;
    border-top: 1px solid #e3eaf2 !important;
    box-shadow: 0 2px 1rem #777 !important;
    z-index: 1270 !important;
    padding-top: 3rem;
}
/*position sous header*/
/*WIDTH : breadcrumb-root idem nav + container*/
.breadcrumb-root {
    z-index: 1220;
    position: fixed;
    top: 0;
    left: 0;
    margin: var(--height-logos) auto 0;
    padding: 0;
    width: 100vw;
    max-width: 1700px;
    background-color: transparent;
    justify-content: flex-end !important;
    align-items: flex-end !important;
    height: var(--height-breadcrumb);
}
.breadcrumb-root > svg {
    z-index: inherit;
    margin-right: -30px !important;
}
.breadcrumb-root span {
    display: none;
}
/*idem .container*/
.breadcrumb-trail {
    margin: 0 !important;
    height: max-content;
    display: flex;
    justify-content: flex-end;
}
/* ... */

